# BehaveFormer

./: .gitignore  config.json  pyproject.toml  requirements.txt  run.py
data/AaltoDB/: build.py  features.py  prepare.py  preprocess.py
data/HMOGDB/: build.py  prepare.py  preprocess.py
data/HuMIdb/: build.py
evaluation/: metrics.py
experiments/common/: datasets.py  lightning.py  logger.py  loss.py  modeling.py
experiments/keystroke/: nested_training.py
experiments/keystroke/AaltoDB/: model.py  test.py  train.py
experiments/keystroke/HMOGDB/: model.py  test.py  train.py
experiments/keystroke/HuMIdb/: model.py  test.py  train.py
experiments/keystroke/common/: lightning.py  logger.py  loss.py  modeling.py
experiments/keystroke_imu_combined/: combined_training.py
experiments/keystroke_imu_combined/HMOGDB/imu_acc/: train.py
experiments/keystroke_imu_combined/HMOGDB/imu_acc_gyr/: train.py
experiments/keystroke_imu_combined/HMOGDB/imu_acc_mag/: model.py  train.py
experiments/keystroke_imu_combined/HMOGDB/imu_all/: model.py  train.py
experiments/keystroke_imu_combined/HMOGDB/imu_gyr/: model.py  train.py
experiments/keystroke_imu_combined/HMOGDB/imu_mag/: model.py  train.py
experiments/keystroke_imu_combined/HMOGDB/imu_mag_gyr/: train.py
experiments/keystroke_imu_combined/HuMIdb/imu_acc/: model.py  train.py
experiments/keystroke_imu_combined/HuMIdb/imu_acc_gyr/: train.py
experiments/keystroke_imu_combined/HuMIdb/imu_acc_mag/: model.py  train.py
experiments/transfer_learning/: model.py  train_AaltoDB.py
utils/: wandb.py
(+6 files in other folders)
